--- a/assets/pug/layout/chat-layout/video-main.pug
+++ b/assets/pug/layout/chat-layout/video-main.pug
@@ -25,6 +25,6 @@ div.h-full.overflow-auto.custom-scroll(class="p-6 h-[856px] lg:h-[830px] 2lg:h-[
   div.group-videocall.flex.gap-4.flex-wrap.justify-center.items-center(class="xl:gap-2 lg:gap-4 2md:hidden")
     img(src='../../assets/images/chat-app/9.jpg' alt='women wear black jacket' class="5xl:last:hidden lg:last:block max-w-[223px] 6xl:max-w-[202px]  2xl:max-w-[223px] h-[250px] xl:max-w-[180px] xl:h-[200px] lg:max-w-[223px] lg:h-[250px] 2lg:max-w-[208px] 2lg:max-h-[240px] md:max-w-[178px] md:max-h-[200px] rounded-xl")
     img(src='../../assets/images/chat-app/10.jpg' alt='men in jacket' class="5xl:last:hidden lg:last:block max-w-[223px] 6xl:max-w-[202px]  2xl:max-w-[223px] h-[250px] xl:max-w-[180px] xl:h-[200px] lg:max-w-[223px] lg:h-[250px] 2lg:max-w-[208px] 2lg:max-h-[240px] md:max-w-[178px] md:max-h-[200px] rounded-xl")
-    img(src='../../assets/images/chat-app/11.jpg' alt='women in gray shirt' class="5xl:last:hidden lg:last:block max-w-[223px] 6xl:max-w-[202px]  2xl:max-w-[223px] h-[250px] xl:max-w-[180px] xl:h-[200px] lg:max-w-[223px] lg:h-[250px] 2lg:max-w-[208px] 2lg:max-h-[240px] md:max-w-[178px] md:max-h-[200px] rounded-xl")
+    img(src='../../assets/images/chat-app/11.jpg' alt='women in gray shirt' class="xl:last:block 5xl:last:hidden lg:last:block max-w-[223px] 6xl:max-w-[202px]  2xl:max-w-[223px] h-[250px] xl:max-w-[180px] xl:h-[200px] lg:max-w-[223px] lg:h-[250px] 2lg:max-w-[208px] 2lg:max-h-[240px] md:max-w-[178px] md:max-h-[200px] rounded-xl")
 
 // Video main end
