--- a/assets/pug/pages/template/chat-app.pug
+++ b/assets/pug/pages/template/chat-app.pug
@@ -81,7 +81,7 @@ html(lang='en')
                   label(for="voice-call-modal")
                     +SVG_ICON("Call","w-[4rem] h-[4rem] 2lg:w-[3.5rem] 2lg:h-[3.5rem] sm:w-[3rem] sm:h-[3rem] p-[12px] stroke-white bg-danger rounded-full rotate-[132deg]")
     //- Accept call modal
-    div.modal-main.accept-call-end.hide-hide
+    div.modal-main.accept-call-end
       input#accept-call-modal(class="" name="accept-call-modal" type='checkbox')
       label.modal-overlay(class="" for='accept-call-modal')
       div.modal.modal-center(class="max-w-[450px] 2md:!w-full rounded-xl")
