widgets & changes in dark layout

--- a/html/template/widgets.html
+++ b/html/template/widgets.html
@@ -1276,7 +1276,7 @@
                 </div>
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
                   <div class="card p-0 overflow-hidden">
-                    <div class="relative"><img class="w-full h-[178px] 2xl:h-[170px] lg:h-[193px] 2md:h-[170px] dark:backdrop-brightness-50" src="../../assets/images/banner/2.jpg" alt="banner">
+                    <div class="relative"><img class="w-full h-[178px] 2xl:h-[170px] lg:h-[193px] 2md:h-[170px] dark:backdrop-brightness-[0.5]" src="../../assets/images/banner/2.jpg" alt="banner">
                       <div class="absolute top-1/2 -translate-y-1/2 left-0 max-w-[70%] px-card-space">
                         <h5 class="text-lg font-extrabold text-title ">$5,859 </h5>
                         <p class="text-lg font-normal 4xl:text-sm text-title ">Make an announcement to your coworkers</p>
@@ -1286,7 +1286,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-4 xl:col-span-6 lg:col-span-12">
+            <div class="col-span-4 xl:col-span-6 lg:col-span-12"> 
               <div class="grid grid-cols-2 gap-card-gap"> 
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
                   <div class="card">
