--- a/assets/pug/layout/header/header.pug
+++ b/assets/pug/layout/header/header.pug
@@ -31,8 +31,8 @@ header.fixed.top-0(class="z-[6] xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc
               include ./cart
             li(class="cursor-pointer flex customizer-btn items-center justify-center px-[calc(7px_+_(14_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] rtl:border-l sm:rtl:last:pl-[calc(7px_+_(14_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] rtl:border-r-0 first:pl-0 last:pr-0 last:border-none sm:last:pr-[calc(7px_+_(14_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] sm:last:border-r sm:last:border-solid border-r border-border-light dark:border-border-dark")
               +SVG_ICON("Setting","w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] cursor-pointer transition-all duration-300 group-hover:stroke-primary stroke-title dark:stroke-white")
-        ul.profile-box.flex.items-center
-          li(class="cursor-pointer pr-[11px] rtl:pr-unset rtl:pl-[11px] rtl:last:pl-0 rtl:last:pr-unset last:pr-0 sm:pr-0 sm:border-none last:border-none rtl:border-l rtl:border-r-0 border-r border-border-2 dark:border-border-dark  dark:border-r flex items-center")  
+        ul.profile-box.flex.items-center 
+          li(class="cursor-pointer pr-[11px] rtl:pr-unset rtl:!pl-[11px] rtl:last:pl-0 rtl:last:pr-unset last:pr-0 sm:pr-0 sm:border-none last:border-none rtl:border-l rtl:border-r-0 border-r border-border-2 dark:border-border-dark  dark:border-r flex items-center")  
             include ./language-dropdown    
           li(class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center")
             include ./profile-box    
