--- a/assets/pug/pages/template/edit-profile.pug
+++ b/assets/pug/pages/template/edit-profile.pug
@@ -163,7 +163,7 @@ html(lang='en')
                               input(type="text" class="dark:border-border-dark" id="postcode" value="2179" required)
                           div
                             label(for="otherNotes") Other Notes
-                            textarea(placeholder="Enter your address.." row="3" id="otherNotes" class="p-[11px] focus:!border-border-light dark:border dark:border-border-dark").w-full.border.border-border-light.rounded-5.text-xs.text-content
+                            textarea(placeholder="Enter your address.." row="3" id="otherNotes" class="p-[11px] focus:!border-border-light dark:border dark:border-border-dark dark:focus:!border-border-dark").w-full.border.border-border-light.rounded-5.text-xs.text-content
                           div.flex.justify-end.items-center(class="gap-3")
                             a(href="javascript:void(0)").btn.bg-secondary.text-xs.text-white.flex.items-center.gap-2(class="!w-fit justify-center !m-0 py-2" type='button') Update
                             a(href="javascript:void(0)").btn.btn-primary.text-xs.text-white.flex.items-center.gap-2(class="!w-fit justify-center !m-0 py-2" type='button') Cancel
