--- a/html/template/user-profile.html
+++ b/html/template/user-profile.html
@@ -368,10 +368,10 @@
                     </li>
                   </ul>
                 </div>
-                <ul class="profile-box flex items-center">
-                  <li class="cursor-pointer pr-[11px] rtl:pr-unset rtl:pl-[11px] rtl:last:pl-0 rtl:last:pr-unset last:pr-0 sm:pr-0 sm:border-none last:border-none rtl:border-l rtl:border-r-0 border-r border-border-2 dark:border-border-dark  dark:border-r flex items-center"> 
+                <ul class="profile-box flex items-center"> 
+                  <li class="cursor-pointer pr-[11px] rtl:pr-unset rtl:!pl-[11px] rtl:last:pl-0 rtl:last:pr-unset last:pr-0 sm:pr-0 sm:border-none last:border-none rtl:border-l rtl:border-r-0 border-r border-border-2 dark:border-border-dark  dark:border-r flex items-center"> 
                     <!-- Language Start -->
-                    <div class="language-select dropdown group">
+                    <div class="language-select dropdown group"> 
                       <button class="flex items-center max-w-[87px] min-w-[87px] md:min-w-[47px] gap-[11px]" id="language-select"><img class="w-[35px] sm:w-[30px] h-auto" src="../../assets/images/flag/en.svg" alt="flag"><span class="flex items-center gap-1 text-lg font-bold 4xl:text-base dark:text-white md:hidden">En</span>
                         <svg class="w-[6px] h-[4px] stroke-title group-hover:rotate-180 duration-300 transition-all dark:stroke-white"> 
                           <use href="../../assets/svg/sprite.svg#Fill-Arrow"> </use>
@@ -380,7 +380,7 @@
                       <ul class="language-menu dropdown-menu flex flex-col gap-3 !min-w-[145px]">
                         <li class="language-option flex items-center gap-2 cursor-pointer" data-value="En"> <img class="w-[32px] h-auto" src="../../assets/images/flag/en.svg" alt="flag"><span class="flex items-center gap-1 text-xs font-bold transition-all duration-300 hover:text-primary">
                              English</span></li>
-                        <li class="language-option flex items-center gap-2 cursor-pointer" data-value="Fr"> <img class="w-[32px] h-auto" src="../../assets/images/flag/fr.svg" alt="flag"><span class="flex items-center gap-1 text-xs font-bold transition-all duration-300 hover:text-primary">
+                        <li class="language-option flex items-center gap-2 cursor-pointer" data-value="Fr"><img class="w-[32px] h-auto" src="../../assets/images/flag/fr.svg" alt="flag"><span class="flex items-center gap-1 text-xs font-bold transition-all duration-300 hover:text-primary">
                              French</span></li>
                         <li class="language-option flex items-center gap-2 cursor-pointer" data-value="Es"> <img class="w-[32px] h-auto" src="../../assets/images/flag/es.svg" alt="flag"><span class="flex items-center gap-1 text-xs font-bold transition-all duration-300 hover:text-primary">
                              Spanich</span></li>
@@ -442,7 +442,7 @@
                       <div class="grid grid-cols-12 gap-2">
                         <div class="col-span-12">
                           <ul class="gap-[10px] p-[15px]"> 
-                            <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light"><a class="flex items-center gap-2" href="index.html"> 
+                            <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Home"> </use>
@@ -451,7 +451,7 @@
                                 <div>
                                   <h4 class="text-xs font-semibold capitalize text-title line-clamp-1">Unique Dashboard</h4><span class="text-xs font-medium text-content line-clamp-1">Over view of all</span>
                                 </div></a></li>
-                            <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light"><a class="flex items-center gap-2" href="index.html"> 
+                            <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Home"> </use>
@@ -1686,7 +1686,7 @@
         <div class="modal modal-center peer-checked:opacity-100 peer-checked:visible w-full max-w-sm dark:bg-sidebar-dark2">
           <div class="modal-body">
             <form class="flex flex-col gap-4 !m-0">
-              <div class="modal-img"><img class="w-16" src="../../assets/images/user-app/send-1.gif" alt="send"></div>
+              <div class="modal-img"><img class="w-16 dark:invert-[1]" src="../../assets/images/user-app/send-1.gif" alt="send"></div>
               <h5 class="text-center font-semibold dark:text-white">Add team member or new ones</h5>
               <div class="search-box relative">
                 <input class="border border-border-light dark:border dark:border-border-dark dark:text-white dark:bg-sidebar-dark2 rounded-5 w-full py-[11px] pl-[25px] pr-[55px]  text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
@@ -1754,7 +1754,7 @@
         <div class="modal modal-center peer-checked:opacity-100 peer-checked:visible w-full max-w-sm dark:bg-sidebar-dark2">
           <div class="modal-body">
             <form class="flex flex-col gap-4 !m-0">
-              <div class="modal-img"><img class="w-16" src="../../assets/images/user-app/send-1.gif" alt="send"></div>
+              <div class="modal-img"><img class="w-16 dark:invert-[1]" src="../../assets/images/user-app/send-1.gif" alt="send"></div>
               <h5 class="text-center font-semibold dark:text-white">Add team member or new ones</h5>
               <div class="search-box relative">
                 <input class="border border-border-light dark:border dark:border-border-dark dark:text-white dark:bg-sidebar-dark2 rounded-5 w-full py-[11px] pl-[25px] pr-[55px]  text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
@@ -1762,7 +1762,7 @@
                   <use href="../../assets/svg/sprite.svg#Search"> </use>
                 </svg><i class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute" data-feather="x"></i>
               </div>
-              <ul class="flex flex-col gap-3">
+              <ul class="flex flex-col gap-3"> 
                 <li class="flex justify-between items-center add-friend">
                   <div class="flex items-center gap-2 w-full">
                     <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/14.png" alt="user"></div>
@@ -1772,9 +1772,9 @@
                   </div><a class="dark:bg-sidebar-dark2 dark:text-white add-btn btn bg-gray-light p-2" href="javascript:void(0)"> Add</a>
                 </li>
                 <li class="flex justify-between items-center add-friend">
-                  <div class="flex items-center gap-2 w-full">
+                  <div class="flex items-center gap-2 w-full"> 
                     <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/19.png" alt="user"></div>
-                    <div class="w-[calc(100%_-_52px)]"> 
+                    <div class="w-[calc(100%_-_52px)]">
                       <p class="text-title text-xs font-semibold dark:text-white">Ally Kshlerin</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
                     </div>
                   </div><a class="dark:bg-sidebar-dark2 dark:text-white add-btn btn bg-gray-light p-2" href="javascript:void(0)"> Add</a>
@@ -1810,7 +1810,7 @@
         <div class="modal modal-center peer-checked:opacity-100 peer-checked:visible w-full max-w-sm dark:bg-sidebar-dark2">
           <div class="modal-body">
             <form class="flex flex-col gap-4 !m-0">
-              <div class="modal-img"><img class="w-16" src="../../assets/images/user-app/send-1.gif" alt="send"></div>
+              <div class="modal-img"><img class="w-16 dark:invert-[1]" src="../../assets/images/user-app/send-1.gif" alt="send"></div>
               <h5 class="text-center font-semibold dark:text-white">Follow team member or new ones</h5>
               <div class="search-box relative"> 
                 <input class="border border-border-light dark:border dark:border-border-dark dark:text-white  dark:bg-sidebar-dark rounded-5 w-full py-[11px] pl-[25px] pr-[55px]  text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
