--- a/assets/postcss/utils/_variables.css
+++ b/assets/postcss/utils/_variables.css
@@ -53,13 +53,14 @@
 
 html[class='dark'] {
   --White: #1f2f3e;
-  --black: #fff;
+  --black: #fff; 
   --light: #44588f;
   --dark: #d8ecff;
   --title: #fff;
   --border-light: #2c4050;
   --apex-tooltip: #17232e;
   --body: #00232e;
+  --content : #9fa6ab;
 }
 html[class='dark'] {
   .apexcharts-tooltip {
