--- a/assets/pug/components/general-menu.pug
+++ b/assets/pug/components/general-menu.pug
@@ -4,7 +4,7 @@ div(class="grid grid-cols-12 gap-2")
    div(class="col-span-12")
       ul(class="gap-[10px] p-[15px]") 
          each dashboard in DASHBOARDS_LIST
-            li(class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light")
+            li(class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2")
                a(href=`${dashboard.url}`).flex.items-center.gap-2 
                   div(class=`p-2 rounded-5  border border-primary`)
                      +SVG_ICON(`${dashboard.icon}`,"w-5 h-5 stroke-primary")
