--- a/html/template/checkout.html
+++ b/html/template/checkout.html
@@ -368,10 +368,10 @@
                     </li>
                   </ul>
                 </div>
-                <ul class="profile-box flex items-center">
-                  <li class="cursor-pointer pr-[11px] rtl:pr-unset rtl:pl-[11px] rtl:last:pl-0 rtl:last:pr-unset last:pr-0 sm:pr-0 sm:border-none last:border-none rtl:border-l rtl:border-r-0 border-r border-border-2 dark:border-border-dark  dark:border-r flex items-center"> 
+                <ul class="profile-box flex items-center"> 
+                  <li class="cursor-pointer pr-[11px] rtl:pr-unset rtl:!pl-[11px] rtl:last:pl-0 rtl:last:pr-unset last:pr-0 sm:pr-0 sm:border-none last:border-none rtl:border-l rtl:border-r-0 border-r border-border-2 dark:border-border-dark  dark:border-r flex items-center"> 
                     <!-- Language Start -->
-                    <div class="language-select dropdown group">
+                    <div class="language-select dropdown group"> 
                       <button class="flex items-center max-w-[87px] min-w-[87px] md:min-w-[47px] gap-[11px]" id="language-select"><img class="w-[35px] sm:w-[30px] h-auto" src="../../assets/images/flag/en.svg" alt="flag"><span class="flex items-center gap-1 text-lg font-bold 4xl:text-base dark:text-white md:hidden">En</span>
                         <svg class="w-[6px] h-[4px] stroke-title group-hover:rotate-180 duration-300 transition-all dark:stroke-white"> 
                           <use href="../../assets/svg/sprite.svg#Fill-Arrow"> </use>
@@ -380,7 +380,7 @@
                       <ul class="language-menu dropdown-menu flex flex-col gap-3 !min-w-[145px]">
                         <li class="language-option flex items-center gap-2 cursor-pointer" data-value="En"> <img class="w-[32px] h-auto" src="../../assets/images/flag/en.svg" alt="flag"><span class="flex items-center gap-1 text-xs font-bold transition-all duration-300 hover:text-primary">
                              English</span></li>
-                        <li class="language-option flex items-center gap-2 cursor-pointer" data-value="Fr"> <img class="w-[32px] h-auto" src="../../assets/images/flag/fr.svg" alt="flag"><span class="flex items-center gap-1 text-xs font-bold transition-all duration-300 hover:text-primary">
+                        <li class="language-option flex items-center gap-2 cursor-pointer" data-value="Fr"><img class="w-[32px] h-auto" src="../../assets/images/flag/fr.svg" alt="flag"><span class="flex items-center gap-1 text-xs font-bold transition-all duration-300 hover:text-primary">
                              French</span></li>
                         <li class="language-option flex items-center gap-2 cursor-pointer" data-value="Es"> <img class="w-[32px] h-auto" src="../../assets/images/flag/es.svg" alt="flag"><span class="flex items-center gap-1 text-xs font-bold transition-all duration-300 hover:text-primary">
                              Spanich</span></li>
@@ -442,7 +442,7 @@
                       <div class="grid grid-cols-12 gap-2">
                         <div class="col-span-12">
                           <ul class="gap-[10px] p-[15px]"> 
-                            <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light"><a class="flex items-center gap-2" href="index.html"> 
+                            <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Home"> </use>
@@ -451,7 +451,7 @@
                                 <div>
                                   <h4 class="text-xs font-semibold capitalize text-title line-clamp-1">Unique Dashboard</h4><span class="text-xs font-medium text-content line-clamp-1">Over view of all</span>
                                 </div></a></li>
-                            <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light"><a class="flex items-center gap-2" href="index.html"> 
+                            <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Home"> </use>
@@ -1028,7 +1028,7 @@
               <div class="tabs-content">
                 <div class="tab-pan fade active show first:rounded-tl-none rounded-5 border-none !px-1 !pb-0" data-tabContent="1">
                   <div>
-                    <h5 class="text-title font-semibold mb-2 dark:text-white dark:text-white">Billing Information </h5>
+                    <h5 class="text-title font-semibold mb-2 dark:text-white">Billing Information </h5>
                     <p class="text-content3 mb-5"> Fill up the following information </p>
                     <form class="flex flex-col gap-4 m-0 theme-form" action="index.html">
                       <div class="grid grid-cols-12 gap-5">
@@ -1431,52 +1431,52 @@
       <div class="modal-main">
         <input class="peer" id="modal-edit" name="modal-edit" type="checkbox">
         <label class="modal-overlay peer-checked:block" for="modal-edit"></label>
-        <div class="modal modal-center w-10/12 max-w-md peer-checked:opacity-100 peer-checked:visible">
-          <div class="modal-header"> 
-            <h3 class="text-title font-semibold text-sm">Information </h3>
+        <div class="modal modal-center w-10/12 dark:bg-sidebar-dark2 max-w-md peer-checked:opacity-100 peer-checked:visible">
+          <div class="modal-header">
+            <h3 class="dark:text-white text-title font-semibold text-sm">Information </h3>
             <label for="modal-edit"> <i class="w-4 h-4 stroke-content3" data-feather="x"></i></label>
           </div>
           <div class="modal-body checkout-detail">
             <form class="theme-form flex flex-col gap-3 !m-0">
-              <div>
+              <div> 
                 <label for="name">Name</label>
-                <input type="text" id="name" placeholder="Enter your name" required>
+                <input class="dark:border-border-dark dark:border" type="text" id="name" placeholder="Enter your name" required>
               </div>
               <div> 
                 <label for="address">Address </label>
-                <textarea class="p-[11px] focus:!border-border-light w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter your address" row="3" id="address"></textarea>
+                <textarea class="dark:border-border-dark dark:focus:!border-border-dark dark:bg-sidebar-dark2 p-[11px] focus:!border-border-light  w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter your address" row="3" id="address"></textarea>
               </div>
-              <div> 
+              <div>
                 <label for="country">Address Type</label>
-                <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px]" id="sortby" aria-label="Default select example">
+                <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:bg-sidebar-dark2 dark:border-border-dark dark:focus:border-border" id="sortby" aria-label="Default select example">
                   <option selected="">Home </option>
                   <option value="1">Office</option>
                 </select>
               </div>
               <div> 
                 <label for="number">Contact No</label>
-                <input class="rounded" type="Number" id="number" placeholder="Enter your contact no" maxlength="10" pattern="d{10}" required>
+                <input class="dark:text-white rounded" type="Number" id="number" placeholder="Enter your contact no" maxlength="10" pattern="d{10}" required>
               </div>
             </form>
           </div>
           <div class="modal-footer flex justify-end gap-3">
-            <label class="inline-block btn bg-gray-light p-3 text-title" for="modal-edit">Close</label>
-            <label class="inline-block btn btn-primary p-3 text-white" for="modal-edit">Save   </label>
+            <label class="inline-block btn bg-gray-light p-3 text-title dark:bg-sidebar-dark2 dark:text-white" for="modal-edit">Close</label>
+            <label class="inline-block btn btn-primary p-3 text-white" for="modal-edit">Save </label>
           </div>
         </div>
       </div>
       <div class="modal-main">
         <input class="peer" id="modal-delete" name="modal-delete" type="checkbox">
         <label class="modal-overlay peer-checked:block" for="modal-delete"></label>
-        <div class="modal modal-center w-10/12 max-w-md peer-checked:opacity-100 peer-checked:visible">
+        <div class="modal modal-center w-10/12 dark:bg-sidebar-dark2 max-w-md peer-checked:opacity-100 peer-checked:visible">
           <div class="modal-body text-center">
             <label class="flex justify-end" for="modal-delete"> <i class="w-4 h-4 stroke-content3" data-feather="x"> </i></label>
             <div class="modal-img"><img class="w-28" src="../../assets/images/ecommerce/delete.gif" alt="delete gif"></div>
-            <h3 class="text-lg font-bold mb-2">Are you sure?</h3>
-            <p class="mb-3">Delete this address only if you are certain you want to. </p>
+            <h3 class="dark:text-white text-lg font-bold mb-2">Are you sure? </h3>
+            <p class="dark:text-contact mb-3">Delete this address only if you are certain you want to.</p>
           </div>
-          <div class="modal-footer flex justify-end gap-3">
-            <label class="inline-block btn bg-gray-light p-3 text-title" for="modal-delete">Close</label>
+          <div class="modal-footer flex justify-end gap-3"> 
+            <label class="dark:bg-sidebar-dark2 dark:text-white inline-block btn bg-gray-light p-3 text-title" for="modal-delete">Close</label>
             <label class="inline-block btn btn-danger p-3 text-white" for="modal-delete">Yes, Sure!</label>
           </div>
         </div>
