--- a/html/template/kanban-board.html
+++ b/html/template/kanban-board.html
@@ -368,10 +368,10 @@
                     </li>
                   </ul>
                 </div>
-                <ul class="profile-box flex items-center">
-                  <li class="cursor-pointer pr-[11px] rtl:pr-unset rtl:pl-[11px] rtl:last:pl-0 rtl:last:pr-unset last:pr-0 sm:pr-0 sm:border-none last:border-none rtl:border-l rtl:border-r-0 border-r border-border-2 dark:border-border-dark  dark:border-r flex items-center"> 
+                <ul class="profile-box flex items-center"> 
+                  <li class="cursor-pointer pr-[11px] rtl:pr-unset rtl:!pl-[11px] rtl:last:pl-0 rtl:last:pr-unset last:pr-0 sm:pr-0 sm:border-none last:border-none rtl:border-l rtl:border-r-0 border-r border-border-2 dark:border-border-dark  dark:border-r flex items-center"> 
                     <!-- Language Start -->
-                    <div class="language-select dropdown group">
+                    <div class="language-select dropdown group"> 
                       <button class="flex items-center max-w-[87px] min-w-[87px] md:min-w-[47px] gap-[11px]" id="language-select"><img class="w-[35px] sm:w-[30px] h-auto" src="../../assets/images/flag/en.svg" alt="flag"><span class="flex items-center gap-1 text-lg font-bold 4xl:text-base dark:text-white md:hidden">En</span>
                         <svg class="w-[6px] h-[4px] stroke-title group-hover:rotate-180 duration-300 transition-all dark:stroke-white"> 
                           <use href="../../assets/svg/sprite.svg#Fill-Arrow"> </use>
@@ -380,7 +380,7 @@
                       <ul class="language-menu dropdown-menu flex flex-col gap-3 !min-w-[145px]">
                         <li class="language-option flex items-center gap-2 cursor-pointer" data-value="En"> <img class="w-[32px] h-auto" src="../../assets/images/flag/en.svg" alt="flag"><span class="flex items-center gap-1 text-xs font-bold transition-all duration-300 hover:text-primary">
                              English</span></li>
-                        <li class="language-option flex items-center gap-2 cursor-pointer" data-value="Fr"> <img class="w-[32px] h-auto" src="../../assets/images/flag/fr.svg" alt="flag"><span class="flex items-center gap-1 text-xs font-bold transition-all duration-300 hover:text-primary">
+                        <li class="language-option flex items-center gap-2 cursor-pointer" data-value="Fr"><img class="w-[32px] h-auto" src="../../assets/images/flag/fr.svg" alt="flag"><span class="flex items-center gap-1 text-xs font-bold transition-all duration-300 hover:text-primary">
                              French</span></li>
                         <li class="language-option flex items-center gap-2 cursor-pointer" data-value="Es"> <img class="w-[32px] h-auto" src="../../assets/images/flag/es.svg" alt="flag"><span class="flex items-center gap-1 text-xs font-bold transition-all duration-300 hover:text-primary">
                              Spanich</span></li>
@@ -442,7 +442,7 @@
                       <div class="grid grid-cols-12 gap-2">
                         <div class="col-span-12">
                           <ul class="gap-[10px] p-[15px]"> 
-                            <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light"><a class="flex items-center gap-2" href="index.html"> 
+                            <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Home"> </use>
@@ -451,7 +451,7 @@
                                 <div>
                                   <h4 class="text-xs font-semibold capitalize text-title line-clamp-1">Unique Dashboard</h4><span class="text-xs font-medium text-content line-clamp-1">Over view of all</span>
                                 </div></a></li>
-                            <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light"><a class="flex items-center gap-2" href="index.html"> 
+                            <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Home"> </use>
@@ -1037,7 +1037,7 @@
               </div>
             </div>
             <div class="card col-span-12 mb-4"> 
-              <div class="card-header">
+              <div class="card-header"> 
                 <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                   <h3 class="text-lg font-bold text-title leading-none">API</h3>
                 </div>
