--- a/assets/pug/components/table/checkout-table.pug
+++ b/assets/pug/components/table/checkout-table.pug
@@ -18,20 +18,20 @@ table.table.equal-space
             span(class="block mt-1 font-semibold text-2xs text-content dark:text-white")=bodyData.subDetail 
         td(class="min-w-[.625rem] dark:text-white")=bodyData.price
     tr  
-      td(class="text-xs dark:text-white font-bold" colspan="2") Sub Total :
-      td(class="text-xs dark:text-white font-bold text-end") $851.00 
+      td(class="text-xs font-bold dark:text-white" colspan="2") Sub Total :
+      td(class="text-xs font-bold dark:text-white text-end") $851.00 
     tr  
       td(class="text-xs dark:text-white" colspan="2") Discount : 
       td(class="text-xs text-content3 text-end") -$50.00
     tr  
       td(class="text-xs dark:text-white" colspan="2") Shipping Charge :
-      td(class="text-xs text-content3 text-end") -$25.99  
+      td(class="text-xs text-content3 text-end") $25.99  
     tr  
       td(class="text-xs dark:text-white" colspan="2") Tax :
-      td(class="text-xs text-content3 text-end") -$12.59  
+      td(class="text-xs text-content3 text-end") $12.59  
     tr  
-      td(class="text-xs dark:text-white font-bold" colspan="2") Total (USD) :
-      td(class="text-xs dark:text-white font-bold text-end") $787.6 
+      td(class="text-xs font-bold dark:text-white" colspan="2") Total (USD) :
+      td(class="text-xs font-bold dark:text-white text-end") $839.58
 
 
 
