--- a/assets/pug/pages/template/invoice-create.pug
+++ b/assets/pug/pages/template/invoice-create.pug
@@ -68,7 +68,7 @@ html(lang='en')
                         option(value='2') Refund
                     div.col-span-3(class="md:col-span-6 sm:col-span-12 min-w-[130px]")
                       label(for="amount") TOTAL AMOUNT
-                      input(type="number" id="amount" placeholder="$787.6")
+                      input(type="number" id="amount" placeholder="$839.58")    
                 div.divider(class="w-full bg-gray-light dark:bg-sidebar-dark")
                 div.grid.grid-cols-12.gap-card-gap
                   div.col-span-4(class="lg:col-span-6 sm:col-span-12")
@@ -106,7 +106,7 @@ html(lang='en')
                       option(value='4') Visa
                     input(type="text" id="card-name" placeholder="Vilma Gerhold" required)
                     input(type="number" id="name" placeholder="xxx xxxx xxxx 7159" required)
-                    input(type="number" id="name" placeholder="$787.6")
+                    input(type="number" id="name" placeholder="$")
                 div.divider(class="w-full bg-gray-light dark:bg-sidebar-dark")
                 form(class="flex flex-col gap-2 m-0 theme-form")
                   label(for="notes") Notes
