--- a/assets/pug/pages/template/blog-grid.pug
+++ b/assets/pug/pages/template/blog-grid.pug
@@ -41,8 +41,24 @@ html(lang='en')
         // Page Body Start 
         div.page-body
           div.grid.grid-cols-12.gap-card-gap
-            div.col-span-3(class="2xl:col-span-4 lg:col-span-12")
-              div.card.sticky.top-0.left-sidebar-aside(class="z-[4] lg:!absolute")
+            div.col-span-12.flex.items-center.justify-between.gap-3.bg-white.p-3.rounded-5(class="2sm:flex-col 2sm:items-end dark:bg-sidebar-dark") 
+              div.flex.items-center.gap-3 
+                label(for="sortby" class="text-xs min-w-max text-content3") Sort By                                    
+                select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px] dark:border-border-dark dark:bg-sidebar-dark2' id="sortby" aria-label='Default select example')
+                  option(selected='') All 
+                  option(value='1') Popular 
+                  option(value='2') Price Low
+                  option(value='3') Price Hight 
+              div.flex.items-center.gap-3 
+                div.search-box.relative(class="2md:hidden")
+                  input(class="rounded-5 w-full py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title border border-border-light dark:border-border-dark" placeholder="Type to Search..." type="search")       
+                  +SVG_ICON("Search","w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white")
+                button
+                  +SVG_ICON("Search","2md:flex hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white")
+                div.product-filter.left-sidebar-hide-logo-show(class="hidden cursor-pointer lg:flex") 
+                  +SVG_ICON("Filter", "w-6 h-6 stroke-content3 left-sidebar-toggle-btn lg:block hidden")
+            div.col-span-3(class="2xl:col-span-4 lg:col-span-12 lg:hidden")
+              div.card.sticky.top-0.left-sidebar-aside(class="z-[4] lg:z-[6] lg:!absolute")
                 div.card-header.border-b-0
                   button(class="justify-end hidden mb-3 lg:flex left-sidebar-toggle absolute right-[-50px] top-[-16px] bg-gray-light p-2 ")   
                     i(data-feather="x" class="w-5 h-5 stroke-title")
@@ -132,15 +148,15 @@ html(lang='en')
 
             div.col-span-9(class="2xl:col-span-8 lg:col-span-12")
               div.grid.grid-cols-12.gap-card-gap
-                div.col-span-12(class="hidden lg:block")
-                  div.card 
-                    div.card-body 
-                      span.left-sidebar-hide-logo-show(class="items-center justify-end hidden lg:flex")
-                        +SVG_ICON("Category","w-5 h-5 stroke-title cursor-pointer hover:stroke-primary ml-auto left-sidebar-toggle-btn lg:block hidden")
+                //- div.col-span-12(class="hidden lg:block")
+                //-   div.card 
+                //-     div.card-body 
+                //-       span.left-sidebar-hide-logo-show(class="items-center justify-end hidden lg:flex")
+                //-         +SVG_ICON("Category","w-5 h-5 stroke-title cursor-pointer hover:stroke-primary ml-auto left-sidebar-toggle-btn lg:block hidden")
 
-                div.col-span-12
-                  div.grid.grid-cols-12.gap-card-gap.w-full.masonryComponent
-                    div.col-span-4(class="2lg:col-span-6 sm:col-span-12 masonryItem")
+                div.col-span-12.product-wrapper-grid
+                  ul.grid.grid-cols-12.gap-card-gap.w-full.masonryComponent
+                    li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")
                       div.card.p-0.group
                         div.blog-img.overflow-hidden.card-image(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
                           img(src='../../assets/images/blog/blog-contains.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-img')
@@ -165,7 +181,7 @@ html(lang='en')
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 8k views
                               i(data-feather="heart" class="h-5 stroke-secondary wish-like")
-                    div.col-span-4(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
+                    li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
                           img(src='../../assets/images/blog/robot.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-img')
@@ -190,7 +206,7 @@ html(lang='en')
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 2k views
                               i(data-feather="heart" class="h-5 stroke-secondary wish-like")
-                    div.col-span-4(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
+                    li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
                           img(src='../../assets/images/blog/blog-contains3.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains3')
@@ -215,7 +231,7 @@ html(lang='en')
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 12k views
                               i(data-feather="heart" class="h-5 stroke-secondary wish-like")
-                    div.col-span-4(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
+                    li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
                           img(src='../../assets/images/blog/blog-contains5.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains5')
@@ -240,7 +256,7 @@ html(lang='en')
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 25k views
                               i(data-feather="heart" class="h-5 stroke-secondary wish-like")
-                    div.col-span-4(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
+                    li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
                           img(src='../../assets/images/blog/blog-contains6.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains6')
@@ -265,7 +281,7 @@ html(lang='en')
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 18k views
                               i(data-feather="heart" class="h-5 stroke-secondary wish-like")
-                    div.col-span-4(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
+                    li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
                           img(src='../../assets/images/blog/blog-contains7.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains7')
@@ -290,7 +306,7 @@ html(lang='en')
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 6k views
                               i(data-feather="heart" class="h-5 stroke-secondary wish-like")
-                    div.col-span-4(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
+                    li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
                           img(src='../../assets/images/blog/blog-contains8.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains8')
@@ -315,7 +331,7 @@ html(lang='en')
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 25k views
                               i(data-feather="heart" class="h-5 stroke-secondary wish-like")
-                    div.col-span-4(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
+                    li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
                           img(src='../../assets/images/blog/blog-contains9.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains9')
@@ -340,7 +356,7 @@ html(lang='en')
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 7k views
                               i(data-feather="heart" class="h-5 stroke-secondary wish-like")
-                    div.col-span-4(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
+                    li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
                           img(src='../../assets/images/blog/blog-contains10.webp' class="duration-700 ease-in scale-100 group-hover:scale-125" alt='blog-contains10')
