--- a/assets/pug/pages/template/fontawesome.pug
+++ b/assets/pug/pages/template/fontawesome.pug
@@ -4,6 +4,9 @@
 //- feather
 -var feather= true;
 
+//- fontawesome
+-var fontAwesome=true;
+
 //- customSelect
 -var customSelect= true;
 
@@ -38,18 +41,18 @@ html(lang='en')
                include ../../layout/unique
             // Sidebar End 
 
-            // Page Body Start 
+            // Page Body Start
             div.page-body
-               div.grid.grid-cols-12.gap-card-gap.icon-event.icon-not-bulk-event
+               div.grid.grid-cols-12.gap-card-gap.icon-event.fontawesome-event
                   div.col-span-12
                      div.card
                         div.card-header.border-b-0
                            h3.text-lg.font-bold Font Awesome Icons
                         div.card-body 
-                           //- div(class="grid grid-cols-12 gap-4 2sm:gap-2") 
-                           //-     each icon in FONT_AWESOME_LIST
-                           //-         div.col-span-2(class="2xl:col-span-3 md:col-span-4 sm:col-span-6")  
-                           //-             +icon-box("fontAwesome",icon.style,icon.name)   
+                           div(class="grid grid-cols-12 gap-4 2sm:gap-2") 
+                              each icon in FONT_AWESOME_LIST
+                                 div.col-span-2(class="2xl:col-span-3 md:col-span-4 sm:col-span-6")  
+                                    +icon-box("fontAwesome",icon)   
 
             // Page Body End 
             +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
