--- a/html/template/tooltip.html
+++ b/html/template/tooltip.html
@@ -35,7 +35,7 @@
                     <use href="../../assets/svg/sprite.svg#Category"> </use>
                   </svg>
                 </button>
-                <h1 class="flex items-center gap-1 text-lg font-extrabold leading-none sm:hidden 4xl:text-base">Tooltip</h1>
+                <h1 class="flex items-center gap-1 text-lg font-extrabold leading-none sm:hidden dark:text-white 4xl:text-base">Tooltip</h1>
               </div>
               <div class="right-header flex items-center flex-1 sm:gap-[calc(7px_+_(14_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] gap-[calc(16px_+_(20_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))]  justify-end">
                 <div class="search-box-wrapper transition-all duration-300 max-w-[40%] 2xl:scale-0 2xl:opacity-0 2xl:invisible 2xl:px-body-space 2xl:max-w-full w-full 2xl:z-[5] flex-1 2xl:absolute 2xl:left-0">
@@ -774,46 +774,242 @@
             </div>
             <nav class="sidebar-main"> 
               <ul class="sidebar-links custom-scroll"> 
+                <li class="title">General</li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Home"> </use>
-                      </svg><span class="sidebar-name">Getting started</span></span></a></li>
+                      </svg><span class="sidebar-name">Dashboards</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="./index.html">Unique</a></li>
+                  </ul>
+                </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="./widgets.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Graph"> </use>
-                      </svg><span class="sidebar-name">File structure</span></span></a></li>
+                      </svg><span class="sidebar-name">Widgets</span></span></a>
+                </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Document"> </use>
-                      </svg><span class="sidebar-name">Working with gulp</span></span></a></li>
+                      </svg><span class="sidebar-name">Page layout</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="./rtl.html">RTL</a></li>
+                    <li> <a href="./dark-layout.html">Dark Layout</a></li>
+                    <li> <a href="./monochrome-mode.html">Monochrome Mode</a></li>
+                  </ul>
+                </li>
+                <li class="title">Components</li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
-                        <use href="../../assets/svg/sprite.svg#Home"> </use>
-                      </svg><span class="sidebar-name">Working with tailwind</span></span></a></li>
-                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="./widgets.html"><span> 
+                        <use href="../../assets/svg/sprite.svg#Folder"> </use>
+                      </svg><span class="sidebar-name">Ui Kits</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="./alert.html">Alert</a></li>
+                    <li> <a href="./avatars.html">Avatars</a></li>
+                    <li> <a href="./badge.html">Badge</a></li>
+                    <li> <a href="./button.html">Button</a></li>
+                    <li> <a href="./collapse.html">Collapse</a></li>
+                    <li> <a href="./divider.html">Divider</a></li>
+                    <li> <a href="./dropdown.html">Dropdown</a></li>
+                    <li> <a href="./modal.html">Modal</a></li>
+                    <li> <a href="./progress.html">Progress</a></li>
+                    <li> <a href="./tooltip.html">Tooltip</a></li>
+                    <li> <a href="./typography.html">Typography</a></li>
+                  </ul>
+                </li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#Ticket-Star"> </use>
+                      </svg><span class="sidebar-name">Bonus Ui</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="./breadcrumb.html">Breadcrumb</a></li>
+                    <li> <a href="./carousel.html">Carousel</a></li>
+                    <li> <a href="./countdown.html">Countdown</a></li>
+                    <li> <a href="./indicator.html">Indicator</a></li>
+                    <li> <a href="./mask.html">Mask</a></li>
+                    <li> <a href="./pagination.html">Pagination</a></li>
+                    <li> <a href="./radial-progress.html">Radial Progress</a></li>
+                    <li> <a href="./rating.html">Rating</a></li>
+                    <li> <a href="./stack.html">Stack</a></li>
+                    <li> <a href="./steps.html">Steps</a></li>
+                    <li> <a href="./swap.html">Swap</a></li>
+                    <li> <a href="./swiper-slider.html">Swiper Slider</a></li>
+                    <li> <a href="./tabs.html">Tabs</a></li>
+                  </ul>
+                </li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#Info-Square"> </use>
+                      </svg><span class="sidebar-name">Icons</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="./feather.html">Feather</a></li>
+                    <li> <a href="./fontawesome.html">Font Awesome</a></li>
+                    <li> <a href="./iconly.html">Iconly</a></li>
+                  </ul>
+                </li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="apex-chart.html"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#Chart"> </use>
+                      </svg><span class="sidebar-name">Apex Chart</span></span></a>
+                </li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="wow-animation.html"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#Video"> </use>
+                      </svg><span class="sidebar-name">Wow Animation</span></span></a>
+                </li>
+                <li class="title">Applications</li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#Chat"> </use>
+                      </svg><span class="sidebar-name">Chat</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="chat-app.html">Chat App</a></li>
+                    <li> <a href="video-app.html">Video App</a></li>
+                  </ul>
+                </li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="calendar.html"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#Calendar"> </use>
+                      </svg><span class="sidebar-name">Calendar</span></span></a>
+                </li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#Bag"> </use>
+                      </svg><span class="sidebar-name">Ecommerce</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="add-product.html">Add Product</a></li>
+                    <li> <a href="cart.html">Cart</a></li>
+                    <li> <a href="checkout.html">Checkout</a></li>
+                    <li> <a href="invoice.html">Invoice</a></li>
+                    <li> <a href="invoice-preview.html">Invoice Preview</a></li>
+                    <li> <a href="invoice-create.html">Invoice Create</a></li>
+                    <li> <a href="product.html">Product</a></li>
+                    <li> <a href="shop.html">Shop</a></li>
+                    <li> <a href="wishlist.html">Wishlist</a></li>
+                  </ul>
+                </li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="email.html"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#Message"> </use>
+                      </svg><span class="sidebar-name">Email</span></span></a>
+                </li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="kanban-board.html"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#Paper"> </use>
+                      </svg><span class="sidebar-name">Kanban Board</span></span></a>
+                </li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="todo.html"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#Time-Circle"> </use>
+                      </svg><span class="sidebar-name">Todo</span></span></a>
+                </li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#2-User"> </use>
+                      </svg><span class="sidebar-name">User</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="user-card.html">User Cards</a></li>
+                    <li> <a href="user-profile.html">User Profile</a></li>
+                  </ul>
+                </li>
+                <li class="title">Forms &amp; Table</li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#Paper"> </use>
+                      </svg><span class="sidebar-name">Forms</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="./checkbox-radio.html">Checkbox &amp; Radio</a></li>
+                    <li> <a href="./form-validation.html">Form Validation</a></li>
+                    <li> <a href="./input-textarea.html">Input &amp; Textarea</a></li>
+                    <li> <a href="./select.html">Select</a></li>
+                    <li> <a href="./switch.html">Switch</a></li>
+                  </ul>
+                </li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="table.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Graph"> </use>
-                      </svg><span class="sidebar-name">App List</span></span></a></li>
+                      </svg><span class="sidebar-name">Tables</span></span></a>
+                </li>
+                <li class="title">Pages</li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
-                        <use href="../../assets/svg/sprite.svg#Document"> </use>
-                      </svg><span class="sidebar-name">Layouts</span></span></a></li>
+                        <use href="../../assets/svg/sprite.svg#Folder"> </use>
+                      </svg><span class="sidebar-name">Other Pages</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="./coming-soon.html">Coming Soon</a></li>
+                    <li> <a href="./error.html">Error</a></li>
+                    <li> <a href="./forgot-password.html">Forgot Password</a></li>
+                    <li> <a href="./login.html">Login</a></li>
+                    <li> <a href="./otp.html">Otp</a></li>
+                    <li> <a href="./register.html">Register</a></li>
+                    <li> <a href="./reset-password.html">Reset Password</a></li>
+                  </ul>
+                </li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="sample-page.html"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#Paper"> </use>
+                      </svg><span class="sidebar-name">Sample Page</span></span></a>
+                </li>
+                <li class="title">Miscellaneous</li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
-                        <use href="../../assets/svg/sprite.svg#Document"> </use>
-                      </svg><span class="sidebar-name">Starter kit</span></span></a></li>
+                        <use href="../../assets/svg/sprite.svg#Folder"> </use>
+                      </svg><span class="sidebar-name">Blog</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="./blog-grid.html">Blog Grid</a></li>
+                    <li> <a href="./blog-detail.html">Blog Detail</a></li>
+                  </ul>
+                </li>
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="knowledgebase.html"><span> 
+                      <svg> 
+                        <use href="../../assets/svg/sprite.svg#Scan"> </use>
+                      </svg><span class="sidebar-name">Knowledgebase</span></span></a>
+                </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
-                        <use href="../../assets/svg/sprite.svg#Document"> </use>
-                      </svg><span class="sidebar-name">Remove Customizer</span></span></a></li>
-                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
-                      <svg> 
-                        <use href="../../assets/svg/sprite.svg#Document"> </use>
-                      </svg><span class="sidebar-name">Thank you</span></span></a></li>
-                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
-                      <svg> 
-                        <use href="../../assets/svg/sprite.svg#Document"> </use>
-                      </svg><span class="sidebar-name">Change log</span></span></a></li>
+                        <use href="../../assets/svg/sprite.svg#Location"> </use>
+                      </svg><span class="sidebar-name">Map</span></span>
+                    <svg> 
+                      <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
+                    </svg></a>
+                  <ul class="sidebar-submenu">
+                    <li> <a href="./maps-js.html">Maps Js</a></li>
+                    <li> <a href="./data-map.html">Data Map</a></li>
+                  </ul>
+                </li>
               </ul>
             </nav>
           </aside>
