--- a/assets/postcss/layout/_main.css
+++ b/assets/postcss/layout/_main.css
@@ -6,9 +6,9 @@
     @apply overflow-hidden;
   }
   .page-body-wrapper {
-    @apply sm:mb-20 mb-14;
+    @apply sm:mb-20 mb-[3.65rem];
     .page-body {
-      @apply py-main-space px-body-space ml-auto h-full dark:bg-sidebar-dark2;
+      @apply py-card-gap px-card-gap ml-auto h-full dark:bg-sidebar-dark2;
     }
   }
 }
