--- a/assets/postcss/pages/_ecommerce.css
+++ b/assets/postcss/pages/_ecommerce.css
@@ -34,7 +34,8 @@
     }
   }
 
-  .shop-sidebar {
+  .shop-sidebar,
+  .blog-sidebar {
     @apply sm:w-[17.875rem] xl:opacity-0 xl:invisible xl:absolute xl:left-[-19.375rem] xl:top-0 xl:transition-all xl:z-[4] xl:duration-1000 xl:translate-x-[-19.375rem] xl:ease-in-out;
     &.show {
       @apply opacity-100 visible absolute top-0 left-0 z-[7] transition-all duration-1000 translate-x-0 ease-in-out;
