--- a/assets/pug/pages/template/blog-detail.pug
+++ b/assets/pug/pages/template/blog-detail.pug
@@ -38,10 +38,10 @@ html(lang='en')
         // Page Body Start 
         div.page-body
           div.grid.grid-cols-12.gap-card-gap
-            div.col-span-12.flex.items-center.justify-between.gap-3.bg-white.p-3.rounded-5(class="2sm:flex-col 2sm:items-end dark:bg-sidebar-dark") 
+            div.col-span-12.flex.items-center.justify-between.gap-3.bg-white.p-3.rounded-5(class=" dark:bg-sidebar-dark") 
               div.flex.items-center.gap-3 
                 label(for="sortby" class="text-xs min-w-max text-content3") Sort By                                    
-                select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px] dark:border-border-dark dark:bg-sidebar-dark2' id="sortby" aria-label='Default select example')
+                select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] 2md:min-w-[130px] py-[9px] dark:border-border-dark dark:bg-sidebar-dark2' id="sortby" aria-label='Default select example')
                   option(selected='') All 
                   option(value='1') Popular 
                   option(value='2') Price Low
@@ -52,13 +52,13 @@ html(lang='en')
                   +SVG_ICON("Search","w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white")
                 button
                   +SVG_ICON("Search","2md:flex hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white")
-                div.product-filter.left-sidebar-hide-logo-show(class="hidden cursor-pointer lg:flex") 
-                  +SVG_ICON("Filter", "w-6 h-6 stroke-content3 left-sidebar-toggle-btn lg:block hidden")
+                div.product-filter(class="hidden cursor-pointer lg:flex") 
+                  +SVG_ICON("Filter", "w-6 h-6 stroke-content3 blog-toggle lg:block hidden")
 
-            div.col-span-3(class="4xl:col-span-4 lg:col-span-12 lg:hidden")
-              div.card.sticky.top-0.left-sidebar-aside(class="z-[4] lg:z-[6] lg:!absolute")
+            div.col-span-3(class="4xl:col-span-4 blog-sidebar lg:w-[290px] sm:w-[280px]")
+              div.card.sticky.top-0
                 div.card-header.border-b-0
-                  button(class="justify-end hidden mb-3 lg:flex left-sidebar-toggle absolute right-[-50px] top-[-16px] bg-gray-light p-2 ")   
+                  button(class="justify-end hidden mb-3 lg:flex absolute blog-close-sidebar right-[-50px] top-[-16px] bg-gray-light p-2 ")   
                     i(data-feather="x" class="w-5 h-5 stroke-title")
                   div.search-box.relative
                     input(class="rounded-full bg-gray-light dark:bg-sidebar-dark2 dark:text-white w-full py-[.6875rem] pl-[1.5625rem] pr-[3.4375rem] text-xs font-semibold text-title" placeholder="Type to Search..." type="search")       
